# GenAI_RAG

./: .editorconfig  Basic_RecursiceCharacterTextSplit_Function.ipynb  RAG_Basic.ipynb  RAG_with_Metadata.ipynb  README.md  The_Great_Gatsby.txt  pyproject.toml
Basic_implementations/: Basic_RecursiceCharacterTextSplit_Function.ipynb
RAG/RAG_pipelines/: RAG_Basic.ipynb
RAG_pipelines/: RAG_Basic.ipynb  RAG_with_Metadata.ipynb
scripts/: repl_test.py
src/genai_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_core/: interfaces.py  pipeline.py
src/rag_core/retrievers/bm25/: __init__.py  _inmem_engine.py  base.py  elastic.py  inmem.py  pyserini.py  whoosh.py
