[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "typer>=0.12",
    "requests>=2.32",
    "pydantic>=2.8"]

[project.optional-dependencies]
whoosh   = ["whoosh>=2.7"]
pyserini = ["pyserini>=0.40.0"]
elastic  = ["elasticsearch>=8"]
dev      = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "types-requests>=2.32"]


[tool.setuptools.packages.find]
where = ["src"]